tests/snapshots/integration__integration_tests__help__help_config_refresh_cache.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - refresh-cache
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----
wt config refresh-cache - Refresh default branch from remote
Usage: wt config refresh-cache [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

Queries the remote to determine the default branch and caches the result.

Use when the remote default branch has changed. The cached value is used by
[2mwt merge[0m, [2mwt list[0m, and other commands that reference the default branch.

----- stderr -----
