tests/snapshots/integration__integration_tests__help__help_config_shell_uninstall.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - shell
    - uninstall
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config shell uninstall - Remove shell integration from config files

Usage: [1m[36mwt config shell uninstall[0m [36m[OPTIONS][0m [36m[bash|fish|zsh|powershell]

[1m[32mArguments:
  [36m[bash|fish|zsh|powershell]
          Shell to uninstall (default: all)
          
          [possible values: bash, fish, zsh, powershell]

[1m[32mOptions:
  [1m[36m-y[0m, [1m[36m--yes
          Skip confirmation prompt

      [1m[36m--dry-run
          Show what would be changed

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Verbose output (-v: hooks, templates; -vv: debug report)

Removes shell integration lines from config files.

[1m[32mExamples

Uninstall from all shells:
  [2mwt config shell uninstall

Uninstall from specific shell only:
  [2mwt config shell uninstall zsh

Skip confirmation prompt:
  [2mwt config shell uninstall --yes

[1m[32mVersion tolerance

Detects various forms of the integration pattern regardless of:
- Command prefix (wt, worktree, etc.)
- Minor syntax variations between versions
