tests/snapshots/integration__integration_tests__help__help_config_show.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - show
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt config show - Show configuration files & locations

Usage: [1m[36mwt config show[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--full[0m
          Run diagnostic checks (CI tools, commit generation, version)

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mOutput:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format
          
          [default: text]
          [possible values: text, json]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

Shows the location and contents of system config, user config
([2m~/.config/worktrunk/config.toml[0m), and project config ([2m.config/wt.toml[0m).
Every section names its path whether or not the file exists.

Alongside each file, [2mconfig show[0m reports what [2mwt[0m would take issue with:
unparsable TOML, keys in the wrong file, deprecated settings, a name in
[2m[list] columns[0m that no column answers to, an approvals file that cannot be
read, and project commands still awaiting approval. It exits non-zero when
configuration or approval state is invalid, so a health check can branch on
it; warnings alone leave the exit code at 0.

An [2mEFFECTIVE[0m section then gives the value each setting it covers resolves to
once all the layers apply — [2m--config-set[0m, [2mWORKTRUNK_*[0m, the matching
[2m[projects][0m entries, the global keys, system config — including the ones no
file sets. It covers the scalars, less the [2m[commit.generation][0m prompt
templates and the two first-run prompt flags. Arrays and tables
([2m[list] columns[0m, hooks, aliases) accumulate across layers instead of
replacing, so the file dumps above already show every contribution and the
section leaves them out.

[1m[32mFull diagnostics[0m

Use [2m--full[0m to run diagnostic checks:

[107m [0m [2m[0m[2m[34mwt[0m[2m config show [0m[2m[36m--full[0m

This tests:
- [1mCI tool status[0m — Whether [2mgh[0m (GitHub) or [2mglab[0m (GitLab) is installed and authenticated
- [1mCommit generation[0m — Whether the LLM command can generate commit messages
- [1mVersion check[0m — Whether a newer version is available on GitHub

----- stderr -----
